# ldbc_finbench

./: README.md  csvtransformation.ipynb  nodestream.yaml  pyproject.toml
data/sf0.1/commadelimited/: Account.csv  AccountRepayLoan.csv  Company.csv  CompanyApplyLoan.csv  CompanyGuaranteeCompany.csv  CompanyInvestCompany.csv  CompanyOwnAccount.csv  Loan.csv  LoanDepositAccount.csv  Medium.csv  MediumSignInAccount.csv  Person.csv  PersonApplyLoan.csv  PersonGuaranteePerson.csv  PersonInvestCompany.csv  PersonOwnAccount.csv
migrations/: 20240703145236.yaml
pipelines/: account.yaml  accountRepayLoan.yaml  accountTransferAccount.yaml  accountWithdrawAccount.yaml  company.yaml  companyApplyLoan.yaml  companyGuaranteeCompany.yaml  companyInvestCompany.yaml  companyOwnAccount.yaml  loan.yaml  loanDepositAccount.yaml  medium.yaml  mediumSignInAccount.yaml  person.yaml  personApplyLoan.yaml  personGuaranteePerson.yaml  personInvestCompany.yaml  personOwnAccount.yaml
queries/: sample_queries.cypher
